# kalmanFilterNotebook

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/cache/: prices_1d.csv
notebooks/: kalman_pairs_trading.ipynb
src/kalman_pairs/: __init__.py  backtest.py  data.py  kalman.py  pair_selection.py  signals.py
tests/: test_backtest.py  test_data.py  test_integration.py  test_kalman.py  test_pair_selection.py  test_signals.py
